--- a/readme.org
+++ b/readme.org
@@ -1,3 +1,3 @@
-#+title  consult-notmuch
+#+title:  consult-notmuch
 
 [[https://notmuchmail.org/][notmuch]] queries in emacs using [[https://github.com/minad/consult][consult]].
