--- a/readme.org
+++ b/readme.org
@@ -1,3 +1,8 @@
 #+title:  consult-notmuch
 
 [[https://notmuchmail.org/][notmuch]] queries in emacs using [[https://github.com/minad/consult][consult]].
+
+Use it via any of the following commands:
+
+  - ~consult-notmuch~
+  - ~consult-notmuch-tree~
