--- a/readme.org
+++ b/readme.org
@@ -72,7 +72,7 @@ The package's elisp code is tangled from this literate program (see
   #+begin_src emacs-lisp
     (defgroup consult-notmuch nil
       "Options for consult-notmuch."
-      :group 'Notmuch)
+      :group 'notmuch)
 
   #+end_src
 
@@ -166,8 +166,8 @@ The package's elisp code is tangled from this literate program (see
                  (c0 (string-match "[[]" mid))
                  (c1 (string-match "[]]" mid))
                  (count (substring mid c0 (1+ c1)))
-                 (authors (truncate-string-to-width
-                           (string-trim (nth 1 (split-string mid "[];]"))) 20))
+                 (auths (truncate-string-to-width
+                         (string-trim (nth 1 (split-string mid "[];]"))) 20))
                  (subject (truncate-string-to-width
                            (string-trim (nth 1 (split-string mid "[;]")))
                            (- (frame-width) 32))))
@@ -175,7 +175,7 @@ The package's elisp code is tangled from this literate program (see
                     (propertize thread-id 'invisible t)
                     (propertize date 'face 'consult-notmuch-date-face)
                     (propertize count 'face 'consult-notmuch-count-face)
-                    (propertize authors 'face 'consult-notmuch-authors-face)
+                    (propertize auths 'face 'consult-notmuch-authors-face)
                     (propertize subject 'face 'consult-notmuch-subject-face)))))
     #+end_src
 
