--- a/readme.org
+++ b/readme.org
@@ -139,7 +139,9 @@ The package's elisp code is tangled from this literate program (see
                        :initial (concat consult-async-default-split initial)
                        :history 'consult-notmuch-history
                        :state #'consult-notmuch--preview
-                       :category 'notmuch-result))
+                       :lookup #'consult-notmuch--lookup
+                       :category 'notmuch-result
+                       :sort nil))
     #+end_src
 
     In the code above we're also using a preview function, [[*Parsing notmuch results][defined
@@ -174,22 +176,44 @@ The package's elisp code is tangled from this literate program (see
                            (- (frame-width)
                               2
                               consult-notmuch-counts-width
-                              consult-notmuch-authors-width))))
-            (format (format "%%s %%s\t%%%ds\t%%%ds\t%%s"
-                            consult-notmuch-counts-width
-                            consult-notmuch-authors-width)
-                    (propertize thread-id 'invisible t)
-                    (propertize date 'face 'consult-notmuch-date-face)
-                    (propertize count 'face 'consult-notmuch-count-face)
-                    (propertize auths 'face 'consult-notmuch-authors-face)
-                    (propertize subject 'face 'consult-notmuch-subject-face)))))
+                              consult-notmuch-authors-width)))
+                 (fmt (format "%%s\t%%%ds\t%%%ds\t%%s"
+                              consult-notmuch-counts-width
+                              consult-notmuch-authors-width)))
+            (propertize
+             (format fmt
+                     (propertize date 'face 'consult-notmuch-date-face)
+                     (propertize count 'face 'consult-notmuch-count-face)
+                     (propertize auths 'face 'consult-notmuch-authors-face)
+                     (propertize subject 'face 'consult-notmuch-subject-face))
+             'thread-id thread-id))))
+
     #+end_src
 
     We use our [[*Faces][customizable faces]], extract a number of substrings and
     play a little trick: to display our candidate, ~notmuch.el~ will
     need the thread identifier, but we don't want to show it in our
-    nicely formatter minibuffer entry.  We simply prepend it to the
-    candidate string, but set its text property ~invisible~ to true.
+    nicely formatter minibuffer entry.  We simply store it as a
+    property of the candidate string, and will use the following
+    helper function to recover it at display time:
+
+    #+begin_src emacs-lisp
+      (defun consult-notmuch--thread-id (candidate)
+        "Recover the thread id for the given CANDIDATE string."
+        (get-text-property 0 'thread-id candidate))
+
+    #+end_src
+
+    and we must not forget defining the lookup function used by
+    ~consult--read~ to find our candidate in the list of propertized
+    strings:
+
+    #+begin_src emacs-lisp
+      (defun consult-notmuch--lookup (_ cands cand)
+        "Find CAND in CANDS."
+        (seq-find (lambda (x) (string= cand x)) cands))
+
+    #+end_src
 
     We have also made the width of the authors and counts fields
     customizable variables:
@@ -221,7 +245,7 @@ The package's elisp code is tangled from this literate program (see
 
       #+begin_src emacs-lisp
 
-        (defvar consult-notmuch--buffer-name "*consult-notmuch-show*"
+        (defvar consult-notmuch--buffer-name "*consult-notmuch*"
           "Name of preview and result buffers.")
 
         (defun consult-notmuch--close-preview ()
@@ -232,16 +256,15 @@ The package's elisp code is tangled from this literate program (see
       #+end_src
 
       and use ~notmuch-show~ to show a candidate. Remember that we've
-      stashed the thread id needed by that function at the beginning
-      of our candidate string, so it's really easy to extract and use
-      it:
+      stashed the thread id needed by that function as a property of
+      of our candidate string, and provided an accessor for it:
 
       #+begin_src emacs-lisp
 
-        (defun consult-notmuch--preview (thread _restore)
-          "Open resulting THREAD in ‘notmuch-show’ view, in a preview buffer."
+        (defun consult-notmuch--preview (candidate _restore)
+          "Open resulting CANDIDATE in ‘notmuch-show’ view, in a preview buffer."
           (consult-notmuch--close-preview)
-          (let ((thread-id (car (split-string thread "\\ +"))))
+          (let ((thread-id (consult-notmuch--thread-id candidate)))
             (notmuch-show thread-id nil nil nil consult-notmuch--buffer-name)))
 
       #+end_src
@@ -256,11 +279,12 @@ The package's elisp code is tangled from this literate program (see
 
       #+begin_src emacs-lisp
 
-        (defun consult-notmuch--show (thread)
-          "Open resulting THREAD in ‘notmuch-show’ view."
+        (defun consult-notmuch--show (candidate)
+          "Open resulting CANDIDATE in ‘notmuch-show’ view."
           (consult-notmuch--close-preview)
-          (let ((title (concat consult-notmuch--buffer-name (substring thread 24)))
-                (thread-id (car (split-string thread "\\ +"))))
+          (let* ((subject (car (last (split-string candidate "\t"))))
+                 (title (concat consult-notmuch--buffer-name " " subject))
+                 (thread-id (consult-notmuch--thread-id candidate)))
             (notmuch-show thread-id nil nil nil title)))
 
       #+end_src
@@ -269,10 +293,10 @@ The package's elisp code is tangled from this literate program (see
 
       #+begin_src emacs-lisp
 
-        (defun consult-notmuch--tree (thread)
-          "Open resulting THREAD in ‘notmuch-tree’."
+        (defun consult-notmuch--tree (candidate)
+          "Open resulting CANDIDATE in ‘notmuch-tree’."
           (consult-notmuch--close-preview)
-          (let ((thread-id (car (split-string thread "\\ +"))))
+          (let ((thread-id (consult-notmuch--thread-id candidate)))
             (notmuch-tree thread-id nil nil)))
 
       #+end_src
@@ -310,7 +334,7 @@ The package's elisp code is tangled from this literate program (see
       ;; Maintainer: Jose A Ortega Ruiz
       ;; Keywords: mail
       ;; License: GPL-3.0-or-later
-      ;; Version: 0.1
+      ;; Version: 0.2
       ;; Package-Requires: ((emacs "26.1") (consult "0.5") (notmuch "0.21"))
       ;; Homepage: https://codeberg.org/jao/consult-notmuch
 
