--- a/readme.org
+++ b/readme.org
@@ -200,7 +200,7 @@ The package's elisp code is tangled from this literate program (see
     #+begin_src emacs-lisp
       (defun consult-notmuch--thread-id (candidate)
         "Recover the thread id for the given CANDIDATE string."
-        (get-text-property 0 'thread-id candidate))
+        (when candidate (get-text-property 0 'thread-id candidate)))
 
     #+end_src
 
@@ -264,7 +264,7 @@ The package's elisp code is tangled from this literate program (see
         (defun consult-notmuch--preview (candidate _restore)
           "Open resulting CANDIDATE in ‘notmuch-show’ view, in a preview buffer."
           (consult-notmuch--close-preview)
-          (let ((thread-id (consult-notmuch--thread-id candidate)))
+          (when-let ((thread-id (consult-notmuch--thread-id candidate)))
             (notmuch-show thread-id nil nil nil consult-notmuch--buffer-name)))
 
       #+end_src
@@ -282,10 +282,10 @@ The package's elisp code is tangled from this literate program (see
         (defun consult-notmuch--show (candidate)
           "Open resulting CANDIDATE in ‘notmuch-show’ view."
           (consult-notmuch--close-preview)
-          (let* ((subject (car (last (split-string candidate "\t"))))
-                 (title (concat consult-notmuch--buffer-name " " subject))
-                 (thread-id (consult-notmuch--thread-id candidate)))
-            (notmuch-show thread-id nil nil nil title)))
+          (when-let ((thread-id (consult-notmuch--thread-id candidate)))
+            (let* ((subject (car (last (split-string candidate "\t"))))
+                   (title (concat consult-notmuch--buffer-name " " subject)))
+              (notmuch-show thread-id nil nil nil title))))
 
       #+end_src
 
@@ -296,7 +296,7 @@ The package's elisp code is tangled from this literate program (see
         (defun consult-notmuch--tree (candidate)
           "Open resulting CANDIDATE in ‘notmuch-tree’."
           (consult-notmuch--close-preview)
-          (let ((thread-id (consult-notmuch--thread-id candidate)))
+          (when-let ((thread-id (consult-notmuch--thread-id candidate)))
             (notmuch-tree thread-id nil nil)))
 
       #+end_src
