--- a/readme.org
+++ b/readme.org
@@ -146,7 +146,7 @@ The package's elisp code is tangled from [[https://codeberg.org/jao/consult-notm
   #+begin_src emacs-lisp
     (defgroup consult-notmuch nil
       "Options for consult-notmuch."
-      :group 'notmuch)
+      :group 'consult)
 
   #+end_src
 
